[project]
name = "RNNTrialStructures"
version = "0.1.0"
authors = [{name="Roger Herikstad", email="rherikstad@proton.me"}]
description = "Python wrapper for the julia packcage RNNTrialStructures"
dependencies = ["juliacall"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

